--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NIGHT.MARKET</title>
     <link rel="stylesheet" href="./style.css">
-    <script src="./script.js"></script>
+    <script defer src="./script.js"></script>
 </head>
 <body>
     <h1>NIGHT.MARKET</h1>
-    <p>ENDS IN <span id="DAYS">2 DAYS</span></p>
+    <p>ENDS IN <span id="DAYSLEFT"></span><span> DAYS</span></p>
     <div class="container">
         <a href="http://127.0.0.1:5500/ghost.png"><div class="gun"><img src="./ghost.png"></div></a>
         <a href="http://127.0.0.1:5500/vandal.png"><div class="gun"><img src="./vandal.png"></div></a>
