--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 </head>
 <body>
     <h1>NIGHT.MARKET</h1>
-    <p>ENDS IN <span id="DAYSLEFT"></span><span> DAYS</span></p>
+    <p>ENDS IN <span id="DAYSLEFT"></span><span id="span-days"> DAYS</span></p>
     <div class="container">
         <a href="http://127.0.0.1:5500/ghost.png"><div class="gun"><img src="./ghost.png"></div></a>
         <a href="http://127.0.0.1:5500/vandal.png"><div class="gun"><img src="./vandal.png"></div></a>
         <a href="http://127.0.0.1:5500/sherif.png"><div class="gun"><img src="./sherif.png"></div></a>
         <a href="http://127.0.0.1:5500/sherif-2.png"><div class="gun"><img src="./sherif-2.png"></div></a>
         <a href="http://127.0.0.1:5500/vandal-2.png"><div class="gun"><img src="./vandal-2.png"></div></a>
-        <a href="http://127.0.0.1:5500/Ares.png"><div class="gun"><img src="./Ares.png"></div></a>
+        <a href="http://127.0.0.1:5500/Ares.png"><div id="rmvgun" class="gun"><img src="./Ares.png"></div></a>
     </div>
 </body>
 </html>
