--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>NIGHT.MARKET</h1>
-    <div id="ps"><p id="p-ends"></p><p id="DAYSLEFT"></p></div>
+    <div id="ps"><p id="p-ends">ENDS IN</p><p id="DAYSLEFT"></p></div>
     <div class="container">
         <a href="http://127.0.0.1:5500/ghost.png"><div class="gun"><img src="./ghost.png"></div></a>
         <a href="http://127.0.0.1:5500/vandal.png"><div class="gun"><img src="./vandal.png"></div></a>
